--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -7,17 +7,41 @@
 </head>
 <body>
 	<header>
-		<a href="index.html" class="imgContainer">
-		<img src="guitar.png" />
+		<a href="index.html" class="imgLogo">
+		<img src="img/guitar.png" />
 		</a>
 		<nav>
 			<ul class="liContainer">
-				<li><a>Instrumentos de Cuerdas</a></li>
-				<li><a>Percusion</a></li>
-				<li><a>Amplificadores</a></li>
-				<li><a>Mas categorias</a></li>
+				<li><a href="#">Instrumentos de Cuerdas</a></li>
+				<li><a href="#">Percusion</a></li>
+				<li><a href="#">Amplificadores</a></li>
+				<li><a href="#">Mas categorias</a></li>
 			</ul>
 		</nav>
 	</header>
+	<main>
+		<section class="section1">
+			<div class="slogan">
+				<h2>
+					El slogan empresarial 3000
+				</h2>	
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita rerum ad ipsam aperiam similique? Aspernatur modi similique commodi impedit nulla officiis maxime sequi qui adipisci libero, architecto, autem ipsam.
+				</p>
+				<div class="sloganButton">
+				<button>Ir a Store</button>
+				<button>Acerca de GS</button>
+				</div>
+			</div>
+			<div class="imgContainer">
+				<img src="img/music.png" alt="imagen de notas musicales" />
+			</div>
+		</section>
+		<section class="section2">
+			<p>
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti impedit accusamus vero alias itaque aspernatur, minus neque reiciendis nihil, quisquam magnam, quod quam. Quasi dolore corrupti porro expedita aliquam, sapiente dolor aperiam possimus nihil et tempore eveniet provident cumque dignissimos, fugit nobis deleniti quas quaerat nulla dicta quisquam? Voluptate, quibusdam natus delectus voluptatem nesciunt sequi consequatur dolore iure facere repudiandae voluptatum! Omnis fugiat debitis itaque libero quaerat ipsa eius obcaecati sequi iste eos. Voluptatum id pariatur iste! Aspernatur perferendis nisi sapiente a quis eos dolor unde numquam doloremque iste. Sed aspernatur velit blanditiis. Molestias officiis laborum expedita quibusdam corrupti facilis!
+			</p>
+		</section>
+	</main>
 </body>
 </html>
