--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,47 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title></title>
-	<link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-	<header>
-		<a href="index.html" class="imgLogo">
-		<img src="img/guitar.png" />
-		</a>
-		<nav>
-			<ul class="liContainer">
-				<li><a href="#">Instrumentos de Cuerdas</a></li>
-				<li><a href="#">Percusion</a></li>
-				<li><a href="#">Amplificadores</a></li>
-				<li><a href="#">Mas categorias</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section class="section1">
-			<div class="slogan">
-				<h2>
-					El slogan empresarial 3000
-				</h2>	
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita rerum ad ipsam aperiam similique? Aspernatur modi similique commodi impedit nulla officiis maxime sequi qui adipisci libero, architecto, autem ipsam.
-				</p>
-				<div class="sloganButton">
-				<button>Ir a Store</button>
-				<button>Acerca de GS</button>
-				</div>
-			</div>
-			<div class="imgContainer">
-				<img src="img/music.png" alt="imagen de notas musicales" />
-			</div>
-		</section>
-		<section class="section2">
-			<p>
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti impedit accusamus vero alias itaque aspernatur, minus neque reiciendis nihil, quisquam magnam, quod quam. Quasi dolore corrupti porro expedita aliquam, sapiente dolor aperiam possimus nihil et tempore eveniet provident cumque dignissimos, fugit nobis deleniti quas quaerat nulla dicta quisquam? Voluptate, quibusdam natus delectus voluptatem nesciunt sequi consequatur dolore iure facere repudiandae voluptatum! Omnis fugiat debitis itaque libero quaerat ipsa eius obcaecati sequi iste eos. Voluptatum id pariatur iste! Aspernatur perferendis nisi sapiente a quis eos dolor unde numquam doloremque iste. Sed aspernatur velit blanditiis. Molestias officiis laborum expedita quibusdam corrupti facilis!
-			</p>
-		</section>
-	</main>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width , initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <title></title>
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/171d63a631.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <header>
+      <a href="index.html" class="imgLogo">
+        <img src="img/guitar.png" />
+      </a>
+      <nav class="menuHamburguesa">
+        <label for="menuHamburguesa">
+        <i class="fa-solid fa-bars"></i> 
+      </label>
+      <input type="checkbox" name="menuHamburguesa" id="menuHamburguesa" />
+        <ul class="liContainer">
+          <li><a href="#">Instrumentos de Cuerdas</a></li>
+          <li><a href="#">Percusion</a></li>
+          <li><a href="#">Amplificadores</a></li>
+          <li><a href="#">Mas categorias</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section1">
+        <div class="slogan">
+          <h2>Slogan Empresarial <span>3000</span></h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+            expedita rerum ad ipsam aperiam similique? Aspernatur modi similique
+            commodi impedit nulla officiis maxime sequi qui adipisci libero,
+            architecto, autem ipsam.
+          </p>
+          <div class="buttonContainer">
+            <button class="button firstButton">Ir a Store</button>
+            <button class="button secondButton">Acerca de GS</button>
+          </div>
+        </div>
+        <div class="imgContainer">
+          <img src="img/store.jpg" alt="imagen de notas musicales" />
+        </div>
+      </section>
+      <section class="section2">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti
+          impedit accusamus vero alias itaque aspernatur, minus neque reiciendis
+          nihil, quisquam magnam, quod quam. Quasi dolore corrupti porro
+          expedita aliquam, sapiente dolor aperiam possimus nihil et tempore
+          eveniet provident cumque dignissimos, fugit nobis deleniti quas
+          quaerat nulla dicta quisquam? Voluptate, quibusdam natus delectus
+          voluptatem nesciunt sequi consequatur dolore iure facere repudiandae
+          voluptatum! Omnis fugiat debitis itaque libero quaerat ipsa eius
+          obcaecati sequi iste eos. Voluptatum id pariatur iste! Aspernatur
+          perferendis nisi sapiente a quis eos dolor unde numquam doloremque
+          iste. Sed aspernatur velit blanditiis. Molestias officiis laborum
+          expedita quibusdam corrupti facilis!
+        </p>
+      </section>
+      <section class="section3">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eum natus fugiat consequuntur voluptatem ea quaerat. Consequatur officiis laborum odio fugiat laudantium asperiores quidem repellat ex vero aliquid odit voluptatibus incidunt, voluptatum totam dignissimos unde ipsam sapiente. Sapiente ab quos quasi numquam, a, dicta aperiam aut neque reiciendis dignissimos tempora ad obcaecati, cum asperiores explicabo voluptatibus accusantium tenetur. Repudiandae earum id exercitationem cum ratione eligendi expedita nemo, aut minus et quasi necessitatibus adipisci harum nostrum voluptates non debitis nam praesentium aliquam inventore neque nisi. Iure consectetur, provident excepturi asperiores dignissimos, incidunt ipsum labore laborum facere minima esse ipsam voluptas debitis?
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
