--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8" />
     <title></title>
     <link href="style.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/171d63a631.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/171d63a631.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -14,13 +17,13 @@
       </a>
       <nav class="menuHamburguesa">
         <label for="menuHamburguesa">
-        <i class="fa-solid fa-bars"></i> 
-      </label>
-      <input type="checkbox" name="menuHamburguesa" id="menuHamburguesa" />
+          <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" name="menuHamburguesa" id="menuHamburguesa" />
         <ul class="liContainer">
-          <li><a href="#">Instrumentos de Cuerdas</a></li>
-          <li><a href="#">Percusion</a></li>
-          <li><a href="#">Amplificadores</a></li>
+          <li><a href="#id-2">Instrumentos de Cuerdas</a></li>
+          <li><a href="#id-3">Percusion</a></li>
+          <li><a href="#id-4">Amplificadores</a></li>
           <li><a href="#">Mas categorias</a></li>
         </ul>
       </nav>
@@ -44,7 +47,8 @@
           <img src="img/store.jpg" alt="imagen de notas musicales" />
         </div>
       </section>
-      <section class="section2">
+      <section class="section section2">
+        <div id="id-2">div fantasma</div>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti
           impedit accusamus vero alias itaque aspernatur, minus neque reiciendis
@@ -60,10 +64,91 @@
           expedita quibusdam corrupti facilis!
         </p>
       </section>
-      <section class="section3">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eum natus fugiat consequuntur voluptatem ea quaerat. Consequatur officiis laborum odio fugiat laudantium asperiores quidem repellat ex vero aliquid odit voluptatibus incidunt, voluptatum totam dignissimos unde ipsam sapiente. Sapiente ab quos quasi numquam, a, dicta aperiam aut neque reiciendis dignissimos tempora ad obcaecati, cum asperiores explicabo voluptatibus accusantium tenetur. Repudiandae earum id exercitationem cum ratione eligendi expedita nemo, aut minus et quasi necessitatibus adipisci harum nostrum voluptates non debitis nam praesentium aliquam inventore neque nisi. Iure consectetur, provident excepturi asperiores dignissimos, incidunt ipsum labore laborum facere minima esse ipsam voluptas debitis?
-        </p>
+      <section class="section section3">
+        <div id="id-3">div fantasma2</div>
+        <div class="title1">
+          <h2>Advantages</h2>
+          <p>
+            Sem tempor hendrerit. Class aptent taciti sociosqu ad litora
+            torquent per.
+          </p>
+        </div>
+        <div class="divContainer">
+          <div class="benefit benefit1">
+            <i class="fa-solid fa-circle-play"></i>
+            <h3>1</h3>
+            <p>
+              Nunc, lacinia sed, varius quis, iaculis eget, ante. Nulla dictum
+              justo eu lacus. Phasellus sit amet quam. Nullam sodales. Cras non
+              magna eu est consectetuer faucibus. Donec tempor lobortis turpis.
+              Sed.
+            </p>
+          </div>
+          <div class="benefit benefit2">
+            <i class="fa-solid fa-compact-disc"></i>
+            <h3>2</h3>
+            <p>
+              Nunc, lacinia sed, varius quis, iaculis eget, ante. Nulla dictum
+              justo eu lacus. Phasellus sit amet quam. Nullam sodales. Cras non
+              magna eu est consectetuer faucibus. Donec tempor lobortis turpis.
+              Sed.
+            </p>
+          </div>
+          <div class="benefit benefit3">
+            <i class="fa-solid fa-record-vinyl"></i>
+            <h3>3</h3>
+            <p>
+              Nunc, lacinia sed, varius quis, iaculis eget, ante. Nulla dictum
+              justo eu lacus. Phasellus sit amet quam. Nullam sodales. Cras non
+              magna eu est consectetuer faucibus. Donec tempor lobortis turpis.
+              Sed.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section section4">
+        <div id="id-4">div fantasma3</div>
+        <div class="title2">
+          <h2>How we work?</h2>
+          <p>
+            Sed massa adipiscing rutrum. Vestibulum ipsum. Phasellus porta
+            sapien.
+          </p>
+        </div>
+        <div class="divContainer2">
+          <div class="steps step1">
+            <i class="fa-solid fa-align-left"></i>
+            <p>
+              Felis, interdum non, sollicitudin in, posuere a, sem. Cras nibh.
+              Sed facilisis ultrices dolor. Vestibulum pretium mauris sed
+              turpis. Phasellus a pede.
+            </p>
+          </div>
+          <div class="steps step2">
+            <i class="fa-solid fa-align-center"></i>
+            <p>
+              Felis, interdum non, sollicitudin in, posuere a, sem. Cras nibh.
+              Sed facilisis ultrices dolor. Vestibulum pretium mauris sed
+              turpis. Phasellus a pede.
+            </p>
+          </div>
+          <div class="steps step3">
+            <i class="fa-solid fa-align-justify"></i>
+            <p>
+              Felis, interdum non, sollicitudin in, posuere a, sem. Cras nibh.
+              Sed facilisis ultrices dolor. Vestibulum pretium mauris sed
+              turpis. Phasellus a pede.
+            </p>
+          </div>
+          <div class="steps step4">
+            <i class="fa-solid fa-align-right"></i>
+            <p>
+              Felis, interdum non, sollicitudin in, posuere a, sem. Cras nibh.
+              Sed facilisis ultrices dolor. Vestibulum pretium mauris sed
+              turpis. Phasellus a pede.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
