--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -150,6 +150,59 @@
           </div>
         </div>
       </section>
+      <section class="clientes">
+        <h2>Our Clients</h2>
+        <p>Est eget odio. Nulla facilisi. Nulla facilisi. Mauris non neque.</p>
+        <div class="clientesCards">
+          <div class="card">
+            <i class="fa-solid fa-mountain-sun"></i>
+            <a class="muestra">Trabajo-1</a>
+          </div>
+          <div class="card"><i class="fa-solid fa-mountain-sun"></i></div>
+          <div class="card"><i class="fa-solid fa-mountain-sun"></i></div>
+          <div class="card"><i class="fa-solid fa-mountain-sun"></i></div>
+        </div>
+      </section>
+      <section class="contactUs">
+        <div class="contactBox">
+          <h2>Contact Us</h2>
+          <div class="contacto">
+            <div class="contacto__1">
+              <span>Juan Roman</span>
+              <p>
+                <i class="fa-solid fa-location-dot"></i>Calle desconocida 700
+              </p>
+              <p><i class="fa-solid fa-envelope"></i>mail@sape.com</p>
+              <p><i class="fa-solid fa-phone"></i>011 1616161616</p>
+            </div>
+            <div class="contacto__2">
+              <span>Carlitos,Tevez</span>
+              <p>
+                <i class="fa-solid fa-location-dot"></i>Calle desconocida 616
+              </p>
+              <p><i class="fa-solid fa-envelope"></i>mail@sape.com</p>
+              <p><i class="fa-solid fa-phone"></i>011 1515151515</p>
+            </div>
+          </div>
+          <div class="redes">
+            <a href="#">
+              <i class="fa-brands fa-facebook-square"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-twitter-square"></i>
+            </a>
+          </div>
+        </div>
+        <div class="imgContacto">
+          <img src="img\shop.jpg" />
+        </div>
+      </section>
     </main>
+    <footer>
+      <img src="img\guitar.png" />
+    </footer>
   </body>
 </html>
