--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -153,14 +153,83 @@
       <section class="clientes">
         <h2>Our Clients</h2>
         <p>Est eget odio. Nulla facilisi. Nulla facilisi. Mauris non neque.</p>
-        <div class="clientesCards">
-          <div class="card">
-            <i class="fa-solid fa-mountain-sun"></i>
-            <a class="muestra">Trabajo-1</a>
+        <div class="cardsContainer">
+          <div class="cards">
+            <div class="front face">
+              <i class="fa-solid fa-mountain-sun"></i>
+            </div>
+            <div class="back face">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+                eveniet, aliquid nulla officiis pariatur cum! Voluptatibus quae
+                incidunt explicabo cumque.
+              </p>
+              <div class="link">
+                <a href="#">Cliente 1</a>
+              </div>
+            </div>
           </div>
-          <div class="card"><i class="fa-solid fa-mountain-sun"></i></div>
-          <div class="card"><i class="fa-solid fa-mountain-sun"></i></div>
-          <div class="card"><i class="fa-solid fa-mountain-sun"></i></div>
+          <div class="cards">
+            <div class="front face">
+              <i class="fa-solid fa-mountain-sun"></i>
+            </div>
+            <div class="back face">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+                eveniet, aliquid nulla officiis pariatur cum! Voluptatibus quae
+                incidunt explicabo cumque.
+              </p>
+              <div class="link">
+                <a href="#">Cliente 2</a>
+              </div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="front face">
+              <i class="fa-solid fa-mountain-sun"></i>
+            </div>
+            <div class="back face">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+                eveniet, aliquid nulla officiis pariatur cum! Voluptatibus quae
+                incidunt explicabo cumque.
+              </p>
+              <div class="link">
+                <a href="#">Cliente 3</a>
+              </div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="front face">
+              <i class="fa-solid fa-mountain-sun"></i>
+            </div>
+            <div class="back face">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+                eveniet, aliquid nulla officiis pariatur cum! Voluptatibus quae
+                incidunt explicabo cumque.
+              </p>
+              <div class="link">
+                <a href="#">Cliente 4</a>
+              </div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="front face">
+              <i class="fa-solid fa-mountain-sun"></i>
+            </div>
+            <div class="back face">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. At
+                eveniet, aliquid nulla officiis pariatur cum! Voluptatibus quae
+                incidunt explicabo cumque.
+              </p>
+              <div class="link">
+                <a href="#">Cliente 5</a>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </section>
       <section class="contactUs">
